# supersociety-battleware

./: .gitignore  Cargo.toml  economy_log.json  plan.md  refactor.md
client/examples/: simulation_ecosystem.rs
client/src/: client.rs  consensus.rs  events.rs  lib.rs
docs/: api.md  architecture-review.md  bugs-claude.md  bugs-consolidated.md  bugs-gemini.md  bugs-gemini2-verification.md  bugs-gemini2.md  bugs-gemini3-verification.md  bugs-gemini3.md  bugs-gemini4-verification.md  bugs-gemini4.md  bugs-openai.md  final-auditor-report.md  issues.md  leaderboard-implementation.md  plan.md  stability-fixes-applied.md  stability-issues-analysis.md  updates.md  verification-report.md
execution/: Cargo.toml
execution/src/: fixed.rs  lib.rs  mocks.rs  state.rs  state_transition.rs
execution/src/casino/: baccarat.rs  blackjack.rs  casino_war.rs  craps.rs  hilo.rs  integration_tests.rs  mod.rs  roulette.rs  sic_bo.rs  super_mode.rs  three_card.rs  ultimate_holdem.rs  video_poker.rs
execution/src/layer/: mod.rs
execution/src/layer/handlers/: casino.rs  liquidity.rs  mod.rs  staking.rs
node/: Cargo.toml
node/src/: engine.rs  indexer.rs  lib.rs  main.rs  tests.rs
node/src/application/: actor.rs  ingress.rs  mempool.rs  mod.rs
node/src/seeder/: actor.rs  ingress.rs  mod.rs
simulator/: Cargo.toml
simulator/src/: lib.rs  main.rs
types/src/: api.rs  casino.rs  execution.rs  token.rs
types/src/casino/: codec.rs  constants.rs  economy.rs  game.rs  leaderboard.rs  mod.rs  player.rs  tests.rs  tournament.rs
website/: README.md  package-lock.json  package.json  vite.config.js
website/scripts/: debug-chain.mjs
website/src/: App.jsx  CasinoApp.tsx  LiquidityApp.tsx  SecurityApp.tsx  StakingApp.tsx  index.css  main.jsx  types.ts
website/src/api/: client.js  explorerClient.ts  nonceManager.js  wasm.js
website/src/components/: ErrorBoundary.tsx  PlaySwapStakeTabs.tsx
website/src/components/casino/: ActiveGame.tsx  BigWinEffect.tsx  GameComponents.tsx  Layout.tsx  MobileDrawer.tsx  RegistrationView.tsx
website/src/components/casino/components/: Layout.tsx
website/src/components/casino/components/games/: HiLoView.tsx  SicBoView.tsx
website/src/components/casino/components/games/blackjack/: BlackjackBoard.tsx
website/src/components/casino/components/games/casinowar/: CasinoWarBoard.tsx
website/src/components/casino/components/games/craps/: CrapsBoard.tsx
website/src/components/casino/components/shared/: GameElements.tsx  GameShell.tsx  Header.tsx
website/src/components/casino/games/: BaccaratView.tsx  BlackjackView.tsx  CrapsView.tsx  GenericGameView.tsx  HiLoView.tsx  RouletteView.tsx  SicBoView.tsx  ThreeCardPokerView.tsx  UltimateHoldemView.tsx  VideoPokerView.tsx
website/src/components/casino/games/baccarat/: BaccaratBoard.tsx
website/src/components/casino/games/hilo/: HiLoBoard.tsx
website/src/components/casino/games/videopoker/: VideoPokerBoard.tsx
website/src/explorer/: TxDetailPage.jsx
website/src/hooks/: useChainGame.ts  useKeyboardControls.ts  useTerminalGame.ts
website/src/hooks/hooks/: useGameState.ts  useKeyboardControls.ts
website/src/security/: VaultBetBot.ts  base64url.ts  keyVault.ts  vaultRuntime.ts
website/src/services/: BotService.ts  CasinoChainService.serializers.js  CasinoChainService.ts  chainService.ts  geminiService.ts
website/src/services/services/: chainService.ts  geminiService.ts
website/src/types/: casino.ts
website/src/utils/: caseNormalizer.ts  gameStateParser.ts  gameUtils.ts
website/src/utils/__tests__/: caseNormalizer.test.ts
website/test/: CasinoChainService.test.js
website/wasm/src/: lib.rs
