[package]
name = "nullspace-execution"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Execution environment for nullspace."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/execution"
documentation = "https://docs.rs/nullspace-execution"

[dependencies]
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
commonware-consensus = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
parallel = ["rayon"]
mocks = []