[package]
name = "nullspace-simulator"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Local backend for nullspace."
readme = "README.md"
homepage = "https://nullspace.xyz"
repository = "https://github.com/commonwarexyz/nullspace/tree/main/simulator"
documentation = "https://docs.rs/nullspace-simulator"

[dependencies]
nullspace-execution = { workspace = true }
nullspace-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
tower_governor = "0.4.2"
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

[dev-dependencies]
nullspace-execution = { workspace = true, features = ["mocks"] }

[features]
default = []
passkeys = []
